projects/observability/prometheus-grafana-loki/manifests/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-nginx-prefix
  namespace: nginx
spec:
  stripPrefix:
    prefixes:
      - /nginx
