projects/observability/prometheus-grafana-loki/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: demo
spec:
  selector:
    app: demo
  ports:
  - name: http
    port: 80
    targetPort: 8080
